[package]
name = "which-sig"
version = "0.1.0"
edition = "2021"
description = "Print which signal caused a program to exit with the given status code."
license-file = "LICENSE"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
signal-hook = "0.3.15"
